# simple-viewer-rust

./: Cargo.toml
src/: data_handler.rs  data_types.rs  main.rs
