[package]
name = "score_viewer"
version = "1.0.0"
edition = "2021"
authors = ["Joona Holkko"]
description = "Simple Score Viewer for CSV and Google Sheets data"

[dependencies]
csv = "1.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.22"
rfd = "0.11"
